--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,7 +143,7 @@
     <string name="title_bad_experience_notification_info">Take care of your Patients</string>
     <string name="checkins_header_info">Check-Ins History</string>
     <string name="doctors_header">Doctors</string>
-    <string name="doctor_patient">Doctor's %s</string>
+    <string name="doctor_patient">Doctor\'s %s</string>
     <string name="doctors_header_info">Your Doctors List</string>
     <string name="medicines_header_info">Your Pain Medications</string>
     <string name="picasso">picasso</string>
