--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -104,7 +104,7 @@
     <string name="delete_medicine">Cancella</string>
     <string name="txt_cards_empty_list">Nessun risultato</string>
     <string name="txt_loading_progress">Sto caricando…</string>
-    <string name="checkins_header">Check-Ins</string>
+    <string name="checkins_header">Check-In</string>
     <string name="medicine_header">Medicine</string>
     <string name="txt_syncing_progress">Sincronizzazione in corso…</string>
     <string name="pref_title_checkin_next_time">Prossimo Check-In</string>
@@ -153,4 +153,8 @@
 
     <string name="text_checkin_submission">Inserito il </string>
 
+    <string name="text_bad_experience_details">[2014–10–11 08:30 AM]\\nThe Patient John Smith had a bad experience claiming 12 hours of sever pain</string>
+    <string name="checkins_online_header">Checkin Remote Search</string>
+    <string name="txt_search_online_running">Searching on the Remote Server…</string>
+    <string name="txt_cards_online_empty_list">To start Online Search enter Patient FirstName &amp; LastName</string>
 </resources>
